--- a/Assets/App/Resources/Localization/Russian.json
+++ b/Assets/App/Resources/Localization/Russian.json
@@ -2,5 +2,6 @@
   "example": "Русский",
   "pause" : "Пауза",
   "continue" : "Продолжить",
-  "play" : "Играть"
+  "play" : "Играть",
+  "stop" : "Остановите это насилие"
 }
