Language change in menu done + now you can return back from popup

--- a/Assets/App/Resources/Localization/English.json
+++ b/Assets/App/Resources/Localization/English.json
@@ -3,5 +3,7 @@
   "pause" : "Pause",
   "continue" : "Continue",
   "play" : "Play",
-  "stop" : "Stop"
+  "stop" : "Stop",
+  "English" : "English",
+  "Russian" : "Русский"
 }
