--- a/Assets/App/Resources/Localization/Russian.json
+++ b/Assets/App/Resources/Localization/Russian.json
@@ -3,5 +3,7 @@
   "pause" : "Пауза",
   "continue" : "Продолжить",
   "play" : "Играть",
-  "stop" : "Остановите это насилие"
+  "stop" : "Стоп",
+  "English" : "English",
+  "Russian" : "Русский"
 }
