--- a/Assets/App/Resources/Localization/English.json
+++ b/Assets/App/Resources/Localization/English.json
@@ -5,5 +5,6 @@
   "play" : "Play",
   "stop" : "Stop",
   "English" : "English",
-  "Russian" : "Русский"
+  "Russian" : "Русский",
+  "menu" : "Menu"
 }
