--- a/Assets/App/Resources/Localization/Russian.json
+++ b/Assets/App/Resources/Localization/Russian.json
@@ -5,5 +5,6 @@
   "play" : "Играть",
   "stop" : "Стоп",
   "English" : "English",
-  "Russian" : "Русский"
+  "Russian" : "Русский",
+  "menu" : "Меню"
 }
