--- a/Assets/App/Resources/Localization/Russian.json
+++ b/Assets/App/Resources/Localization/Russian.json
@@ -6,5 +6,8 @@
   "stop" : "Стоп",
   "English" : "English",
   "Russian" : "Русский",
-  "menu" : "Меню"
+  "menu" : "Меню",
+  "cigar" : "Галактика\nСигара",
+  "sombrero" : "Галактика\nСомбреро",
+  "milky-way" : "Галактика\nМлечный путь"
 }
