pause, restart, continue, health + cracks done.

--- a/Assets/App/Resources/Localization/English.json
+++ b/Assets/App/Resources/Localization/English.json
@@ -1,6 +1,6 @@
 ﻿{
   "back": "Back",
-  "pause" : "Pause",
+  "restart" : "Restart",
   "continue" : "Continue",
   "play" : "Play",
   "stop" : "Stop",
