--- a/Assets/App/Resources/Localization/Russian.json
+++ b/Assets/App/Resources/Localization/Russian.json
@@ -1,6 +1,6 @@
 ﻿{
   "back": "Назад",
-  "pause" : "Пауза",
+  "restart" : "Рестарт",
   "continue" : "Продолжить",
   "play" : "Играть",
   "stop" : "Стоп",
