Pack buttons lock, create balls based on health.

--- a/Assets/App/Resources/Localization/English.json
+++ b/Assets/App/Resources/Localization/English.json
@@ -9,5 +9,6 @@
   "menu" : "Menu",
   "cigar" : "Cigar\nGalaxy",
   "sombrero" : "Sombrero\nGalaxy",
-  "milky-way" : "Milky Way\nGalaxy"
+  "milky-way" : "Milky Way\nGalaxy",
+  "not-discovered" : "Galaxy\nNot discovered"
 }
