--- a/Assets/App/Resources/Localization/Russian.json
+++ b/Assets/App/Resources/Localization/Russian.json
@@ -9,5 +9,6 @@
   "menu" : "Меню",
   "cigar" : "Галактика\nСигара",
   "sombrero" : "Галактика\nСомбреро",
-  "milky-way" : "Галактика\nМлечный путь"
+  "milky-way" : "Галактика\nМлечный путь",
+  "not-discovered" : "Галактика\nНе обнаружена"
 }
