win, lose, normal levels

--- a/Assets/App/Resources/Localization/English.json
+++ b/Assets/App/Resources/Localization/English.json
@@ -10,5 +10,9 @@
   "cigar" : "Cigar\nGalaxy",
   "sombrero" : "Sombrero\nGalaxy",
   "milky-way" : "Milky Way\nGalaxy",
-  "not-discovered" : "Galaxy\nNot discovered"
+  "not-discovered" : "Galaxy\nNot discovered",
+  "lose" : "You lose",
+  "win" : "you win",
+  "next" : "next",
+  "skip" : "skip level"
 }
