--- a/Assets/App/Resources/Localization/Russian.json
+++ b/Assets/App/Resources/Localization/Russian.json
@@ -10,5 +10,9 @@
   "cigar" : "Галактика\nСигара",
   "sombrero" : "Галактика\nСомбреро",
   "milky-way" : "Галактика\nМлечный путь",
-  "not-discovered" : "Галактика\nНе обнаружена"
+  "not-discovered" : "Галактика\nНе обнаружена",
+  "lose" : "Вы проиграли!",
+  "win" : "вы выиграли",
+  "next" : "далее",
+  "skip" : "пропустить уровень"
 }
