Energy bar done.

--- a/Assets/App/Resources/Localization/English.json
+++ b/Assets/App/Resources/Localization/English.json
@@ -14,5 +14,6 @@
   "lose" : "You lose",
   "win" : "you win",
   "next" : "next",
-  "skip" : "skip level"
+  "skip" : "skip level",
+  "low-energy" : "low energy"
 }
