--- a/Assets/App/Resources/Localization/Russian.json
+++ b/Assets/App/Resources/Localization/Russian.json
@@ -14,5 +14,6 @@
   "lose" : "Вы проиграли!",
   "win" : "вы выиграли",
   "next" : "далее",
-  "skip" : "пропустить уровень"
+  "skip" : "пропустить уровень",
+  "low-energy" : "недостаточно энергии"
 }
